--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "resgrid-cordova-plugins-rollbar": "^1.4.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "resgrid.cordova.plugins.rollbar": "~1.4.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.11",
