--- a/package.json
+++ b/package.json
@@ -34,11 +34,9 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "resgrid-cordova-plugins-rollbar": "^1.4.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26",
-    "resgrid.cordova.plugins.rollbar": "~1.4.0"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.11",
@@ -51,11 +49,7 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {},
-      "resgrid.cordova.plugins.rollbar": {
-        "ROLLBAR_ACCESS_TOKEN": "YOUR_ROLLBAR_ACCEESS_TOKEN",
-        "ROLLBAR_ENVIRONMENT": "ROLLBAR_ENVIRONMENT"
-      }
+      "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
       "android",
